argocd_stuff/technitium/technitium.yaml
# ########################################################## INGRESS ROUTE

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: technitium-ingress
  namespace: technitium
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`technitium.andreiboghean.com`)
      services:
        - name: technitium-dns-technitium-dnsserver
          port: 80
  tls:
    certResolver: default
